syntax = "proto3";

package mapreduce;

option go_package = "./proto";

service Master {
    rpc RequestTask (WorkerStatus) returns (Task) {}
}

message None {}

message WorkerStatus {
    int32 task_id = 1;
    oneof status {
        MapTaskStatus map_task_status = 2;
        ReduceTaskStatus reduce_task_status = 3;
        None none = 4;
    }
}

message MapTaskStatus {
    string error_message = 1;
    string task_address = 2;
}

message ReduceTaskStatus {
    string error_message = 1;
    string task_address = 2;
}

message Task {
    string operation_hash = 1;
    oneof task {
        MapTask map_task = 2;
        ReduceTask reduce_task = 3;
        None none = 4;
    }
}

message MapTask {
    int32 task_id = 1;
    int32 num_map_tasks = 2;
    int32 num_reduce_tasks = 3;
    string source_host = 4;
}
message ReduceTask {
    int32 task_id = 1;
    int32 num_map_tasks = 2;
    int32 num_reduce_tasks = 3;
    repeated string source_hosts = 4;
}
